<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.walid.tfg.InsertUserCarActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:paddingLeft="10pt"
        android:paddingRight="10pt"
        tools:ignore="MissingConstraints">

        <ProgressBar
            android:id="@+id/insertCarProgress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>
        <ScrollView
            android:id="@+id/insertCarScroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/carRegistrationText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="10pt"
                    android:layout_marginTop="15dp"
                    android:text="@string/registration" />

                <EditText
                    android:id="@+id/carRegistration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:layout_marginTop="10dp"
                    android:hint="@string/registrationExample" />

                <TextView
                    android:id="@+id/brandText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="10pt"
                    android:text="@string/brand" />

                <Spinner
                    android:id="@+id/brandSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/modelText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="10pt"
                    android:text="@string/model" />

                <Spinner
                    android:id="@+id/modelSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/colorText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="10pt"
                    android:text="@string/color" />

                <Spinner
                    android:id="@+id/colorSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/categoryText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textSize="10pt"
                    android:layout_marginTop="10dp"/>

                <Spinner
                    android:id="@+id/categorySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/seatingText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seating"
                    android:textSize="10pt"
                    android:layout_marginTop="10dp"/>

                <Spinner
                    android:id="@+id/seatingSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"/>

                <Button
                    android:id="@+id/insertCarButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/insert"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
